added integration tests

--- a/base/templates/base/login/change_password.html
+++ b/base/templates/base/login/change_password.html
@@ -5,6 +5,6 @@
             <label for="{{ field.id_for_label }}">{{ field.label }}</label>
             {{ field }}
         {% endfor %}
-        <input type="submit" value="אישור"/>
+        <input type="submit" value="אישור" id="submit"/>
     </form>
 </div>
