--- a/base/templates/base/request_manipulations/add_request.html
+++ b/base/templates/base/request_manipulations/add_request.html
@@ -33,7 +33,7 @@
             <label for="comments">הערות</label>
             <input type="text" id="comments" name="comments">
             <div>
-                <input type="submit" value="שלח/י בקשה">
+                <input type="submit" value="שלח/י בקשה" id="submit">
             </div>
         </form>
     </div>
