--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,7 +89,7 @@ tbody tr:last-of-type {
 caption {
     font-size: 25px;
     font-weight: 700;
-    margin: 10px;
+    margin-bottom: 20px;
 }
 
 caption .prod-buttons {
@@ -761,4 +761,17 @@ PRODUCTS PAGE
 
 #delete-inp {
     background: red;
+}
+
+.digit-circle {
+    position: absolute;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    margin-top: 13px;
+    font-size: 15px;
+    color: white;
 }
