--- a/base/templates/base/panel_buttons/borrowings_button.html
+++ b/base/templates/base/panel_buttons/borrowings_button.html
@@ -12,10 +12,10 @@
         </svg>
         <span class="digit-circle"
               style="margin-left:305px;
-                     {% if counter > 0 %} background-color:blue;
+                     {% if borrowings_counter > 0 %} background-color:blue;
                      {% else %} background-color:grey;
                      {% endif %}">
-            {{ counter }}
+            {{ borrowings_counter }}
         </span>
         השאלות
     </a>
