--- a/base/templates/base/panel_buttons/breakages_button.html
+++ b/base/templates/base/panel_buttons/breakages_button.html
@@ -12,10 +12,10 @@
         </svg>
         <span class="digit-circle"
               style="margin-left:490px;
-                     {% if counter > 0 %} background-color:red;
+                     {% if breakages_counter > 0 %} background-color:red;
                      {% else %} background-color:green;
                      {% endif %}">
-            {{ counter }}
+            {{ breakages_counter }}
         </span>
         פריטים בתיקון
     </a>
