--- a/base/templates/base/panel_buttons/requests_button.html
+++ b/base/templates/base/panel_buttons/requests_button.html
@@ -19,10 +19,10 @@
         </svg>
         <span class="digit-circle"
               style="margin-left:280px;
-                     {% if counter > 0 %} background-color:blue;
+                     {% if requests_counter > 0 %} background-color:blue;
                      {% else %} background-color:grey;
                      {% endif %}">
-            {{ counter }}
+            {{ requests_counter }}
         </span>
         בקשות
     </a>
