--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,6 +22,11 @@
                     <a style="font-size: 50px;">{{ PROJECT_NAME }}</a>
                 </li>
             </ul>
+            <ul class="navigation" style="position: absolute; top: 10px; margin-left: 1570px;">
+                <li>
+                    <a style="font-size: 30px; text-align: right-to-left">{{ greeting }}</a>
+                </li>
+            </ul>
         {% endif %}
         {% if not is_home_page %}
             <ul class="navigation">
