--- a/base/templates/base/borrowing_manipulations/borrowings.html
+++ b/base/templates/base/borrowing_manipulations/borrowings.html
@@ -20,75 +20,125 @@
             <colgroup>
                 <col span="8">
             </colgroup>
-            <thead>
-                {% if user_type == "admin" or user_type == "moderator" %}
-                    <tr>
-                        {% if user_type == "moderator" %}
-                            <th>דיווח תקלה</th>
-                        {% endif %}
-                        {% if user_type == "admin" or mod_finish_borrowing %}
-                            <th>סיום השאלה</th>
-                        {% endif %}
-                        <th>בקשת הארכה</th>
-                        <th>תאריך החזרה</th>
-                        <th>תאריך השאלה</th>
-                        <th>סטטוס</th>
-                        <th>מייל</th>
-                        <th>מס' טלפון</th>
-                        <th>שם משפחה</th>
-                        <th>שם פרטי</th>
-                        <th>ת.ז</th>
-                        <th>שם הפריט</th>
-                        <th>מק''ט הפריט</th>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <th>דיווח תקלה</th>
-                        <th>בקשת הארכה</th>
-                        <th>תאריך החזרה</th>
-                        <th>תאריך השאלה</th>
-                        <th>שם הפריט</th>
-                        <th>מק''ט הפריט</th>
-                    </tr>
-                {% endif %}
-            </thead>
-            <tbody>
-                {% if user_type == "admin" or user_type == "moderator" %}
-                    {% for borrowing in borrowings %}
-                        <tr style="background-color:
-                            {% if borrowing.product.breakage_reported %} rgb(112, 128, 144)
-                            {% elif borrowing.extension_requested %} rgb(255, 171, 0)
-                            {% elif now > borrowing.date_to_return %} rgb(254, 100, 100)
-                            {% elif borrowing.user.is_mod %} rgb(0, 116, 217)
-                            {% endif %}">
+            {% if not is_content %}
+                {% include "base/no_content.html" %}
+            {% else %}
+                <thead>
+                    {% if user_type == "admin" or user_type == "moderator" %}
+                        <tr>
                             {% if user_type == "moderator" %}
-                                <td>
-                                    <div class="prod-buttons">
-                                        <a href="{% if borrowing.user.pk == user.pk and not borrowing.product.breakage_reported %}{% url 'report_breakage' borrowing.product.pk %}{% else %}#{% endif %}" class="edit-btn">לדווח תקלה</a>
-                                    </div>
-                                </td>
+                                <th>דיווח תקלה</th>
                             {% endif %}
                             {% if user_type == "admin" or mod_finish_borrowing %}
+                                <th>סיום השאלה</th>
+                            {% endif %}
+                            <th>בקשת הארכה</th>
+                            <th>תאריך החזרה</th>
+                            <th>תאריך השאלה</th>
+                            <th>סטטוס</th>
+                            <th>מייל</th>
+                            <th>מס' טלפון</th>
+                            <th>שם משפחה</th>
+                            <th>שם פרטי</th>
+                            <th>ת.ז</th>
+                            <th>שם הפריט</th>
+                            <th>מק''ט הפריט</th>
+                        </tr>
+                    {% else %}
+                        <tr>
+                            <th>דיווח תקלה</th>
+                            <th>בקשת הארכה</th>
+                            <th>תאריך החזרה</th>
+                            <th>תאריך השאלה</th>
+                            <th>שם הפריט</th>
+                            <th>מק''ט הפריט</th>
+                        </tr>
+                    {% endif %}
+                </thead>
+                <tbody>
+                    {% if user_type == "admin" or user_type == "moderator" %}
+                        {% for borrowing in borrowings %}
+                            <tr style="background-color:
+                                {% if borrowing.product.breakage_reported %} rgb(112, 128, 144)
+                                {% elif borrowing.extension_requested %} rgb(255, 171, 0)
+                                {% elif now > borrowing.date_to_return %} rgb(254, 100, 100)
+                                {% elif borrowing.user.is_mod %} rgb(0, 116, 217)
+                                {% endif %}">
+                                {% if user_type == "moderator" %}
+                                    <td>
+                                        <div class="prod-buttons">
+                                            <a href="{% if borrowing.user.pk == user.pk and not borrowing.product.breakage_reported %}{% url 'report_breakage' borrowing.product.pk %}{% else %}#{% endif %}" class="edit-btn">לדווח תקלה</a>
+                                        </div>
+                                    </td>
+                                {% endif %}
+                                {% if user_type == "admin" or mod_finish_borrowing %}
+                                    <td>
+                                        <div class="prod-buttons">
+                                            <a href="{% if borrowing.user.pk != user.pk %}{% url 'finish_borrowing' borrowing.pk %}{% else %}#{% endif %}" class="edit-btn">לסיים</a>
+                                        </div>
+                                    </td>
+                                {% endif %}
+                                {% if user_type == "admin" %}
+                                    <td>
+                                        <div class="prod-buttons">
+                                            <a href="{% if borrowing.extension_requested %}{% url   'borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
+                                               class="edit-btn">לצפות</a>
+                                        </div>
+                                    </td>
+                                {% endif %}
+                                {% if user_type == "moderator" %}
+                                    <td>
+                                        {% if not borrowing.extension_requested %}
+                                            <div class="prod-buttons">
+                                                <a href="{% if borrowing.user.pk == user.pk and not borrowing.product.breakage_reported %}{% url 'add_borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
+                                                   class="edit-btn">בקשה להארכה</a>
+                                            </div>
+                                        {% else %}
+                                            בקשת הארכה ל-{{ borrowing.additional_days }}
+                                            {% if borrowing.additional_days > 1 %}
+                                                ימים
+                                            {% else %}
+                                                יום
+                                            {% endif %}
+                                        {% endif %}
+                                    </td>
+                                {% endif %}
+                                <td>{{ borrowing.date_to_return|date:"SHORT_DATETIME_FORMAT" }}</td>
+                                <td>{{ borrowing.borrowed_at|date:"SHORT_DATETIME_FORMAT" }}</td>
+                                <td>
+                                    {% if borrowing.user.role == "student" %}
+                                        סטודנט
+                                    {% elif borrowing.user.role == "lecturer" %}
+                                        מרצה
+                                    {% else %}
+                                        אחר
+                                    {% endif %}
+                                </td>
+                                <td>{{ borrowing.user.email }}</td>
+                                <td>{{ borrowing.user.mobile_num }}</td>
+                                <td>{{ borrowing.user.last_name }}</td>
+                                <td>{{ borrowing.user.first_name }}</td>
+                                <td>{{ borrowing.user.identity_num }}</td>
+                                <td>{{ borrowing.product.name }}</td>
+                                <td>{{ borrowing.product.stock_num }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% else %}
+                        {% for borrowing in borrowings %}
+                            <tr style="background-color:
+                                {% if borrowing.product.breakage_reported %} rgb(112, 128, 144)
+                                {% elif borrowing.extension_requested %} rgb(255, 171, 0)
+                                {% elif now > borrowing.date_to_return %} rgb(254, 100, 100)
+                                {% endif %}">
                                 <td>
                                     <div class="prod-buttons">
-                                        <a href="{% if borrowing.user.pk != user.pk %}{% url 'finish_borrowing' borrowing.pk %}{% else %}#{% endif %}" class="edit-btn">לסיים</a>
+                                        <a href="{% if not borrowing.product.breakage_reported %}{% url 'report_breakage' borrowing.product.pk %}{% else %}#{% endif %}" class="edit-btn">לדווח תקלה</a>
                                     </div>
                                 </td>
-                            {% endif %}
-                            {% if user_type == "admin" %}
-                                <td>
-                                    <div class="prod-buttons">
-                                        <a href="{% if borrowing.extension_requested %}{% url   'borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
-                                           class="edit-btn">לצפות</a>
-                                    </div>
-                                </td>
-                            {% endif %}
-                            {% if user_type == "moderator" %}
                                 <td>
                                     {% if not borrowing.extension_requested %}
                                         <div class="prod-buttons">
-                                            <a href="{% if borrowing.user.pk == user.pk and not borrowing.product.breakage_reported %}{% url 'add_borrowing_extension' borrowing.pk %}{% else %}#{% endif %}"
-                                               class="edit-btn">בקשה להארכה</a>
+                                            <a href="{% if not borrowing.product.breakage_reported %}{% url 'add_borrowing_extension' borrowing.id %}{% else %}#{% endif %}" class="edit-btn">בקשה להארכה</a>
                                         </div>
                                     {% else %}
                                         בקשת הארכה ל-{{ borrowing.additional_days }}
@@ -99,61 +149,15 @@
                                         {% endif %}
                                     {% endif %}
                                 </td>
-                            {% endif %}
-                            <td>{{ borrowing.date_to_return|date:"SHORT_DATETIME_FORMAT" }}</td>
-                            <td>{{ borrowing.borrowed_at|date:"SHORT_DATETIME_FORMAT" }}</td>
-                            <td>
-                                {% if borrowing.user.role == "student" %}
-                                    סטודנט
-                                {% elif borrowing.user.role == "lecturer" %}
-                                    מרצה
-                                {% else %}
-                                    אחר
-                                {% endif %}
-                            </td>
-                            <td>{{ borrowing.user.email }}</td>
-                            <td>{{ borrowing.user.mobile_num }}</td>
-                            <td>{{ borrowing.user.last_name }}</td>
-                            <td>{{ borrowing.user.first_name }}</td>
-                            <td>{{ borrowing.user.identity_num }}</td>
-                            <td>{{ borrowing.product.name }}</td>
-                            <td>{{ borrowing.product.stock_num }}</td>
-                        </tr>
-                    {% endfor %}
-                {% else %}
-                    {% for borrowing in borrowings %}
-                        <tr style="background-color:
-                            {% if borrowing.product.breakage_reported %} rgb(112, 128, 144)
-                            {% elif borrowing.extension_requested %} rgb(255, 171, 0)
-                            {% elif now > borrowing.date_to_return %} rgb(254, 100, 100)
-                            {% endif %}">
-                            <td>
-                                <div class="prod-buttons">
-                                    <a href="{% if not borrowing.product.breakage_reported %}{% url 'report_breakage' borrowing.product.pk %}{% else %}#{% endif %}" class="edit-btn">לדווח תקלה</a>
-                                </div>
-                            </td>
-                            <td>
-                                {% if not borrowing.extension_requested %}
-                                    <div class="prod-buttons">
-                                        <a href="{% if not borrowing.product.breakage_reported %}{% url 'add_borrowing_extension' borrowing.id %}{% else %}#{% endif %}" class="edit-btn">בקשה להארכה</a>
-                                    </div>
-                                {% else %}
-                                    בקשת הארכה ל-{{ borrowing.additional_days }}
-                                    {% if borrowing.additional_days > 1 %}
-                                        ימים
-                                    {% else %}
-                                        יום
-                                    {% endif %}
-                                {% endif %}
-                            </td>
-                            <td>{{ borrowing.date_to_return|date:"SHORT_DATETIME_FORMAT" }}</td>
-                            <td>{{ borrowing.borrowed_at|date:"SHORT_DATETIME_FORMAT" }}</td>
-                            <td>{{ borrowing.product.name }}</td>
-                            <td>{{ borrowing.product.stock_num }}</td>
-                        </tr>
-                    {% endfor %}
-                {% endif %}
-            </tbody>
+                                <td>{{ borrowing.date_to_return|date:"SHORT_DATETIME_FORMAT" }}</td>
+                                <td>{{ borrowing.borrowed_at|date:"SHORT_DATETIME_FORMAT" }}</td>
+                                <td>{{ borrowing.product.name }}</td>
+                                <td>{{ borrowing.product.stock_num }}</td>
+                            </tr>
+                        {% endfor %}
+                    {% endif %}
+                </tbody>
+            {% endif %}
         </table>
     </div>
 {% endblock content %}
