--- a/static/css/main.css
+++ b/static/css/main.css
@@ -790,3 +790,30 @@ PRODUCTS PAGE
     font-size: 15px;
     color: white;
 }
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popup-content {
+    background-color: #fff;
+    padding: 20px;
+    max-width: 400px;
+    margin: 250px auto;
+    border-radius: 5px;
+}
+
+.button-container {
+    text-align: center;
+}
+
+.popup-button {
+    padding: 10px 20px;
+    margin: 10px;
+}
