--- a/base/templates/base/user_manipulations/users.html
+++ b/base/templates/base/user_manipulations/users.html
@@ -10,7 +10,7 @@
                 <div class="prod-buttons">
                     <form enctype="multipart/form-data" method="post">
                         {% csrf_token %}
-                        <a href="#" onclick="openFileExplorer()" class="edit-btn">
+                        <a href="javascript:void(0)" onclick="openFileExplorer()" class="edit-btn">
                             הוספת כמות משתמשים
                         </a>
                         <input type="file"
