--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,7 +24,7 @@
             </ul>
             <ul class="navigation" style="position: absolute; top: 10px; margin-left: 1570px;">
                 <li>
-                    <a style="font-size: 30px; text-align: right-to-left">{{ greeting }}</a>
+                    <a style="font-size: 30px; direction: rtl;">{{ greeting }}</a>
                 </li>
             </ul>
         {% endif %}
