--- a/base/templates/base/category_manipulations/category.html
+++ b/base/templates/base/category_manipulations/category.html
@@ -16,11 +16,11 @@
                 {% endif %}
                 {% if user_type == "admin" or user_type == "moderator" %}
                     <div class="prod-buttons">
-                        <a href="{% url 'borrowings_per_category' category.id %}"
-                           class="edit-btn">השאלות</a>
+                        <a href="{% url 'requests_per_category' category.id %}" class="edit-btn">בקשות</a>
                     </div>
                     <div class="prod-buttons">
-                        <a href="{% url 'requests_per_category' category.id %}" class="edit-btn">בקשות</a>
+                        <a href="{% url 'borrowings_per_category' category.id %}"
+                           class="edit-btn">השאלות</a>
                     </div>
                     <div class="prod-buttons">
                         <a href="{% url 'breakages_per_category' category.id %}"
@@ -53,7 +53,7 @@
                             {% if user_type == "admin" %}
                                 <td>
                                     <div class="prod-buttons">
-                                        <a href="{% if product.is_available and not product.in_repair %}{% url 'report_breakage' product.id %}{% else %}#{% endif %}"
+                                        <a href="{% if product.is_available and not product.in_repair %}{% url 'report_breakage' product.id %}{% else %}javascript:void(0){% endif %}"
                                            class="edit-btn">לשלוח לתיקון</a>
                                     </div>
                                 </td>
@@ -61,7 +61,7 @@
                             {% if user_type == "admin" or mod_delete_product %}
                                 <td>
                                     <div class="prod-buttons">
-                                        <a href="{% if product.is_available %}{% url 'delete_product' product.id %}{% else %}#{% endif %}"
+                                        <a href="{% if product.is_available %}{% url 'delete_product' product.id %}{% else %}javascript:void(0){% endif %}"
                                            class="edit-btn">למחוק</a>
                                     </div>
                                 </td>
@@ -69,7 +69,7 @@
                             {% if user_type == "admin" or mod_edit_product %}
                                 <td>
                                     <div class="prod-buttons">
-                                        <a href="{% if product.is_available %}{% url 'edit_product' product.id %}{% else %}#{% endif %}"
+                                        <a href="{% if product.is_available %}{% url 'edit_product' product.id %}{% else %}javascript:void(0){% endif %}"
                                            class="edit-btn">לערוך</a>
                                     </div>
                                 </td>
@@ -91,7 +91,7 @@
                                     {% if user.role == "student" or user.role == "lecturer" %}
                                         <td>
                                             <div class="prod-buttons">
-                                                <a href="{% if product.is_available %}{% url 'add_request'  product.id %}{% else %}#{% endif %}"
+                                                <a href="{% if product.is_available %}{% url 'add_request'  product.id %}{% else %}javascript:void(0){% endif %}"
                                                    class="edit-btn">לשאול פריט</a>
                                             </div>
                                         </td>
